tests/errors/assign-check/multiple.fil
comp main<@G: 1>() -> () {
    bundle a[1]: [@G, @G+1] 32;
    a{0} = a{1};
    a{0} = a{2};
}